// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Notifications should render 1`] = `
<div>
  <div>
    <div
      class="text-sm font-bold text-theme-neutral-500"
    />
    <div
      class="sc-AxirZ jAePJ"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-theme-neutral-400 text-left text-xs select-none pb-3}"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  hidden"
              >
                <div
                  class="mr-1"
                >
                  -
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        />
      </table>
    </div>
    <div
      class="-mb-2 text-sm font-bold mt-9 text-theme-neutral-500"
    />
    <div
      class="sc-AxirZ jAePJ"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-theme-neutral-400 text-left text-xs select-none pb-3}"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  hidden"
              >
                <div
                  class="mr-1"
                >
                  -
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        />
      </table>
    </div>
  </div>
</div>
`;

exports[`Notifications should render plugins 1`] = `
<div>
  <div>
    <div
      class="text-sm font-bold text-theme-neutral-500"
    >
      Plugins
    </div>
    <div
      class="sc-AxirZ jAePJ"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-theme-neutral-400 text-left text-xs select-none pb-3}"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  hidden"
              >
                <div
                  class="mr-1"
                >
                  -
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr>
            <td
              class="w-8"
            >
              <div
                class="flex p-2 mr-4 rounded-lg bg-logo"
              >
                <img
                  alt="ARK Explorer"
                  src="/static/media/ark-logo.bafd72bb.png"
                />
              </div>
            </td>
            <td>
              <span
                class="font-bold text-md text-theme-neutral-600"
              >
                ARK Explorer
              </span>
              <span
                class="text-md text-theme-neutral-600"
              >
                 
                - update v2.5.6
              </span>
            </td>
            <td>
              <div
                class="font-bold text-right cursor-pointer text-md text-theme-primary-500"
                data-testid="notifications__plugin-action"
              >
                Update now
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
    <div
      class="-mb-2 text-sm font-bold mt-9 text-theme-neutral-500"
    />
    <div
      class="sc-AxirZ jAePJ"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-theme-neutral-400 text-left text-xs select-none pb-3}"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  hidden"
              >
                <div
                  class="mr-1"
                >
                  -
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        />
      </table>
    </div>
  </div>
</div>
`;

exports[`Notifications should render transactions 1`] = `
<div>
  <div>
    <div
      class="text-sm font-bold text-theme-neutral-500"
    >
      Transactions
    </div>
    <div
      class="sc-AxirZ jAePJ"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-theme-neutral-400 text-left text-xs select-none pb-3}"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  hidden"
              >
                <div
                  class="mr-1"
                >
                  -
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        />
      </table>
    </div>
    <div
      class="-mb-2 text-sm font-bold mt-9 text-theme-neutral-500"
    />
    <div
      class="sc-AxirZ jAePJ"
      role="table"
    >
      <table
        class="table-auto"
      >
        <thead>
          <tr
            role="row"
          >
            <th
              class="text-theme-neutral-400 text-left text-xs select-none pb-3}"
              colspan="1"
              data-testid="table__th--0"
              role="columnheader"
            >
              <div
                class="flex flex-inline align-top  hidden"
              >
                <div
                  class="mr-1"
                >
                  -
                </div>
                <div
                  class="mt-1 text-theme-color-neutral-500"
                  data-testid="table__Sort"
                />
              </div>
            </th>
          </tr>
        </thead>
        <tbody
          role="rowgroup"
        >
          <tr
            class="border-b cursor-pointer border-theme-neutral-200"
            data-testid="transaction__row"
          >
            <td
              class="w-20 py-4 mt-1"
            >
              <div
                class="sc-AxiKw flJkQE border-theme-success-300 text-theme-success-400 -mr-1"
              >
                <div
                  class="sc-AxjAm hoUaGk"
                  height="40"
                  width="40"
                >
                  <svg>
                    received.svg
                  </svg>
                </div>
              </div>
              <div
                class="sc-AxiKw hqWIYZ"
              />
            </td>
            <td
              class="w-56 py-1"
            >
              <div
                class="inline-block truncate"
              >
                <span
                  class="text-theme-neutral-800 font-semibold max-w-24 flex-auto truncate mt-4 mr-1 text-sm"
                  data-testid="address__wallet-name"
                >
                  My Wallet
                </span>
                <span
                  class="text-theme-neutral-400 font-semibold text-sm"
                  data-testid="address__wallet-address"
                >
                  ASuusX...GQ3kqT
                </span>
              </div>
            </td>
            <td
              class="py-1 text-sm text-right"
            >
              <div
                class="sc-AxhCb jEeydN"
                color="success"
              >
                100 BTC
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
